--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -761,7 +761,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
  |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
- |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 建立内核线程
+ |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建work内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
  |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
@@ -834,7 +834,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pid = get_pid(task_tgid(current));
         pid_nr = pid_vnr(pid);
         put_pid(pid);
-        // 建立内核线程
+        // 在cpu0上创建work内核线程
         pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
         if (IS_ERR(pit->worker))
                 goto fail_kthread;
@@ -847,7 +847,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit_state = &pit->pit_state;
         // 初始化hrtimer, 这个高精准定时器就作为虚拟时钟的时钟源
         hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
-        // hrtimer的处理函数
+        // hrtimer的中断处理函数
         pit_state->timer.function = pit_timer_fn;
 
         pit_state->irq_ack_notifier.gsi = 0;
@@ -896,9 +896,12 @@ fail_request:
 }
 ```
 
+初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在kvm_pit_reset里，每个1ms产生一次中断
+
+
 这里的worker在`kvm_create_pit`函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
 
-kvm_apic_nmi_wd_deliver最终会调用到__apic_accept_irq，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
+`kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
 
 
 内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
