--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -32,7 +32,7 @@
   - [6.2. 整体流程](#62-整体流程)
   - [6.3. 入口代码](#63-入口代码)
   - [6.4. kvm_create_pit(): 创建pit(8254)](#64-kvm_create_pit-创建pit8254)
-  - [kvm_timer_fn(): 中断流程](#kvm_timer_fn-中断流程)
+  - [pit_timer_fn(): 中断流程](#pit_timer_fn-中断流程)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -899,9 +899,6 @@ fail_request:
 初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在kvm_pit_reset里，每个1ms产生一次中断
 
 
-这里的worker在`kvm_create_pit`函数里设置好（kthread_init_work(&pit->expired,pit_do_work)）
-
-`kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置中断标志位，然后通过kvm_kick_vcpu将vcpu拉回到host，等到vcpu重新进入guest时，将中断信息注入到vmcs结构体里，这样vcpu回到guest后就可以处理tick中断了。
 
 
 内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
@@ -1017,9 +1014,63 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 }
 ```
 
-## kvm_timer_fn(): 中断流程
+## pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
+
+```cpp
+static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
+{
+        struct kvm_kpit_state *ps = container_of(data, struct kvm_kpit_state, timer);
+        struct kvm_pit *pt = pit_state_to_pit(ps);
+
+        if (atomic_read(&ps->reinject))
+                atomic_inc(&ps->pending);
+
+        kthread_queue_work(pt->worker, &pt->expired);
+
+        if (ps->is_periodic) {
+                hrtimer_add_expires_ns(&ps->timer, ps->period);
+                return HRTIMER_RESTART;
+        } else
+                return HRTIMER_NORESTART;
+}
+```
+
+这里的worker在`kvm_create_pit`函数里设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+
+```cpp
+static void pit_do_work(struct kthread_work *work)
+{
+        struct kvm_pit *pit = container_of(work, struct kvm_pit, expired);
+        struct kvm *kvm = pit->kvm;
+        struct kvm_vcpu *vcpu;
+        int i;
+        struct kvm_kpit_state *ps = &pit->pit_state;
+
+        if (atomic_read(&ps->reinject) && !atomic_xchg(&ps->irq_ack, 0))
+                return;
+
+        kvm_set_irq(kvm, pit->irq_source_id, 0, 1, false);
+        kvm_set_irq(kvm, pit->irq_source_id, 0, 0, false);
+
+        /*
+         * Provides NMI watchdog support via Virtual Wire mode.
+         * The route is: PIT -> LVT0 in NMI mode.
+         *
+         * Note: Our Virtual Wire implementation does not follow
+         * the MP specification.  We propagate a PIT interrupt to all
+         * VCPUs and only when LVT0 is in NMI mode.  The interrupt can
+         * also be simultaneously delivered through PIC and IOAPIC.
+         */
+        if (atomic_read(&kvm->arch.vapics_in_nmi_mode) > 0)
+                kvm_for_each_vcpu(i, vcpu, kvm)
+                        kvm_apic_nmi_wd_deliver(vcpu);
+}
+```
+
+`kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
+
 
 
 
