--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -33,7 +33,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
          * writes to the unused one.
          */
         idx = srcu_read_lock(&kvm->irq_srcu);
-        // 同一个irq注册的所有设备, 存于irq_set, 返回数量
+        // 获取同一个irq注册的所有设备, 存于irq_set, 返回数量
         i = kvm_irq_map_gsi(kvm, irq_set, irq);
         srcu_read_unlock(&kvm->irq_srcu, idx);
         /* 依次调用同一个irq上的所有芯片的set方法 */
@@ -53,9 +53,12 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 
 各个参数的意思:
 
-- **kvm**指定特定的虚拟机，
-- `irq_source_id`是**中断源ID**，一般有`KVM_USERSPACE_IRQ_SOURCE_ID`和`KVM_IRQFD_RESAMPLE_IRQ_SOURCE_ID`；
-- **irq**是**全局的中断号**，
+- **kvm**指定特定的虚拟机
+
+- `irq_source_id`是**中断源ID**，一般有`KVM_USERSPACE_IRQ_SOURCE_ID`和`KVM_IRQFD_RESAMPLE_IRQ_SOURCE_ID`, 对于KVM设备我们都会申请一个中断资源ID，注册KVM IO设备时申请的
+
+- **irq**是**全局的中断号**，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32
+
 - **level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。
 
 回到函数中，首先要收集的是**同一irq**上注册的**所有的设备信息**，这主要在于**irq共享**的情况，非共享的情况下最多就一个。**设备信息**抽象成一个`kvm_kernel_irq_routing_entry`，这里临时放到`irq_set`数组中。
