--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -33,7 +33,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
          * writes to the unused one.
          */
         idx = srcu_read_lock(&kvm->irq_srcu);
-        // 获取同一个irq注册的所有设备, 存于irq_set, 返回数量
+        // 获取同一个irq注册的所有中断路由项, 存于irq_set, 返回数量
         i = kvm_irq_map_gsi(kvm, irq_set, irq);
         srcu_read_unlock(&kvm->irq_srcu, idx);
         /* 依次调用同一个irq上的所有芯片的set方法 */
