--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -23,6 +23,7 @@
 int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
                 bool line_status)
 {
+        // 这儿代码是不是有问题? 为啥只有3项
         struct kvm_kernel_irq_routing_entry irq_set[KVM_NR_IRQCHIPS];
         int ret = -1, i, idx;
 
@@ -39,6 +40,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
         /* 依次调用同一个irq上的所有芯片的set方法 */
         while (i--) {
                 int r;
+                // 触发对应路由实体的触发函数
                 r = irq_set[i].set(&irq_set[i], kvm, irq_source_id, level,
                                    line_status);
                 if (r < 0)
@@ -62,6 +64,29 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 - **level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。
 
 回到函数中，首先要收集的是**同一irq**上注册的**所有的设备信息**，这主要在于**irq共享**的情况，非共享的情况下最多就一个。**设备信息**抽象成一个`kvm_kernel_irq_routing_entry`，这里临时放到`irq_set`数组中。
+
+```cpp
+int kvm_irq_map_gsi(struct kvm *kvm,
+                    struct kvm_kernel_irq_routing_entry *entries, int gsi)
+{
+        struct kvm_irq_routing_table *irq_rt;
+        struct kvm_kernel_irq_routing_entry *e;
+        int n = 0;
+        // 得到中断路由表
+        irq_rt = srcu_dereference_check(kvm->irq_routing, &kvm->irq_srcu,
+                                        lockdep_is_held(&kvm->irq_lock));
+        if (irq_rt && gsi < irq_rt->nr_rt_entries) {
+                // 提取中断路由表中对应的中断路由实体，map[gsi]是一个对应中断的路由实体表头结点
+                // 这里遍历它能够得到所有对应的路由实体
+                hlist_for_each_entry(e, &irq_rt->map[gsi], link) {
+                        entries[n] = *e;
+                        ++n;
+                }
+        }
+
+        return n;
+}
+```
 
 然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`。
 
