--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -672,6 +672,7 @@ static int setup_routing_entry(struct kvm *kvm,
 然后调用了`kvm_set_routing_entry`，该函数中主要是设置了`kvm_kernel_irq_routing_entry`中的**set函数**
 - **IOAPIC**的话设置的是`kvm_set_ioapic_irq`函数，
 - **pic**的话设置`kvm_set_pic_irq`函数
+- MSI中断消息系统的中断触发函数`kvm_set_msi`
 
 然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。
 
