--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -88,7 +88,22 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 }
 ```
 
-然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`。
+然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`, MSI中断消息系统的中断触发函数`kvm_set_msi`.
+
+对于PIC来说
+
+它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成虚拟中断控制器的设置。如果是**边缘触发**，需要触发电平先1再0，完成一个正常的中断模拟。
+
+对于IOAPIC来说
+
+相对要复杂一点，它的大概调用过程如下，有兴趣的可以去跟一下。
+
+kvm_set_ioapic_irq -> kvm_ioapic_set_irq -> ioapic_service -> ioapic_deliver -> kvm_irq_delivery_to_apic -> __apic_accept_irq -> apic_set_vector
+
+ 
+
+整个流程是先检查IOAPIC状态，如果符合注入条件，则组建中断结构体，发送到指定VCPU的LAPIC，设置LAPIC的寄存器，完成虚拟中断控制器设置。
+
 
 我们以`kvm_set_ioapic_irq`为例进行分析，该函数**没有实质性的操作**，就调用了`kvm_ioapic_set_irq`函数
 
@@ -203,16 +218,24 @@ out:
 边沿触发且旧irr与新的不等, 或者, 电平触发，就会对其进行更新，进入`ioapic_service`函数。
 
 ```cpp
+// arch/x86/kvm/ioapic.h
+#ifdef CONFIG_X86
+#define RTC_GSI 8
+#else
+#define RTC_GSI -1U
+#endif
+
+// arch/x86/kvm/ioapic.c
 static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 {
         // 获取重定向表的相应项
         union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
         struct kvm_lapic_irq irqe;
         int ret;
-        // 1. 该entry设置了mask
+        // 1. 该entry设置了mask, 即被屏蔽
         // 或者
-        // 2. 电平触发的
-        // 直接返回
+        // 2. 电平触发以及
+        // 不触发, 直接返回
         if (entry->fields.mask ||
             (entry->fields.trig_mode == IOAPIC_LEVEL_TRIG &&
             entry->fields.remote_irr))
@@ -230,7 +253,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
         // 边沿触发
         if (irqe.trig_mode == IOAPIC_EDGE_TRIG)
                 ioapic->irr_delivered |= 1 << irq;
-        // RTC
+        // RTC, irq8
         if (irq == RTC_GSI && line_status) {
                 /*
                  * pending_eoi cannot ever become negative (see
@@ -244,7 +267,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
                 ioapic->rtc_status.pending_eoi = (ret < 0 ? 0 : ret);
         } else
                 ret = kvm_irq_delivery_to_apic(ioapic->kvm, NULL, &irqe, NULL);
-
+        // 投递成功并且是电平触发, 设置目的中断请求寄存器
         if (ret && irqe.trig_mode == IOAPIC_LEVEL_TRIG)
                 entry->fields.remote_irr = 1;
 
