--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -98,7 +98,7 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 
 相对要复杂一点，它的大概调用过程如下，有兴趣的可以去跟一下。
 
-kvm_set_ioapic_irq -> kvm_ioapic_set_irq -> ioapic_service -> ioapic_deliver -> kvm_irq_delivery_to_apic -> __apic_accept_irq -> apic_set_vector
+`kvm_set_ioapic_irq -> kvm_ioapic_set_irq -> ioapic_service -> ioapic_deliver -> kvm_irq_delivery_to_apic -> __apic_accept_irq -> apic_set_vector`
 
  
 
@@ -228,7 +228,7 @@ out:
 // arch/x86/kvm/ioapic.c
 static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 {
-        // 获取重定向表的相应项
+        // 根据irq获取重定向表的相应项
         union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
         struct kvm_lapic_irq irqe;
         int ret;
