--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -109,7 +109,7 @@ struct kvm_kernel_irq_routing_entry {
         u32 gsi;
         // 类型
         u32 type;
-        // 该GSI关联的触发方式
+        // 该GSI关联的中断触发方式
         int (*set)(struct kvm_kernel_irq_routing_entry *e,
                    struct kvm *kvm, int irq_source_id, int level,
                    bool line_status);
@@ -143,7 +143,7 @@ GSI是该entry对应的**GSI号**，一般**和IRQ是一样**，
 
 type表示**该gsi的类型**, 取值可以是` KVM_IRQ_ROUTING_IRQCHIP`, `KVM_IRQ_ROUTING_MSI`等
 
-set表示该gsi关联的中断触发方法（不同type的GSI会调用不同的set触发函数，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
+set表示该gsi关联的中断触发方法（不同type的GSI会调用不同的set触发函数)，通过该方法把**IRQ传递给IO-APIC**；按照**芯片类型**实现路由项中的`set`接口，
 
 link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；hlist_node则是中断路由表哈希链表的节点，通过link将同一个gsi对应的中断路由项链接到map对应的gsi上。
 
