--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -16,30 +16,9 @@
 ```cpp
 kvm_set_irq()  // vm ioctl的入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
- ├─ while()  // 遍历得到的中断路由项
- ├─  kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
- |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
- |   ├─ kvm_pic_init()   // pic创建, 8259
- |   |   ├─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
- |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
- |   |   ├─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
- |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
- |   ├─ kvm_ioapic_init()   // ioapic的初始化
- |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
- |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
- |   |       ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
- |   |       ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
- |   |       ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
- |   |       ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
- |   |       |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
- |   |       |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
- |   |       └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
- |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+ ├─ while() {  // 遍历中断路由项
+ ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
+ ├─ } // 遍历得到的中断路由项
 ```
 
 ## 入口函数: kvm_set_irq()
@@ -73,7 +52,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
         /* 依次调用同一个irq上的所有芯片的set方法 */
         while (i--) {
                 int r;
-                // 触发对应路由实体的触发函数
+                // 调用对应路由实体的触发函数
                 r = irq_set[i].set(&irq_set[i], kvm, irq_source_id, level,
                                    line_status);
                 if (r < 0)
@@ -121,7 +100,12 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 }
 ```
 
-然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`, MSI中断消息系统的中断触发函数`kvm_set_msi`.
+然后对于数组中的**每个元素**，调用**其set方法**
+- 目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`
+- 在**传统pic**情况下，是`kvm_set_pic_irq`
+- **MSI中断**消息系统的中断触发函数`kvm_set_msi`.
+
+## PIC中断触发
 
 对于PIC来说
 
