--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -11,10 +11,10 @@
 
 它是指**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
-## 整理流程
+## 整体流程
 
 ```cpp
-kvm_set_irq()  // vm ioctl的入口
+kvm_set_irq()  // 中断注入入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
  ├─ while() {  // 遍历中断路由项
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
@@ -105,15 +105,45 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 - 在**传统pic**情况下，是`kvm_set_pic_irq`
 - **MSI中断**消息系统的中断触发函数`kvm_set_msi`.
 
-## PIC中断触发
+## PIC中断触发: kvm_set_pic_irq
 
 对于PIC来说
 
 它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成虚拟中断控制器的设置。如果是**边缘触发**，需要触发电平先1再0，完成一个正常的中断模拟。
 
+## IOAPIC中断触发: kvm_set_ioapic_irq
+
 对于IOAPIC来说
 
-相对要复杂一点，它的大概调用过程如下，有兴趣的可以去跟一下。
+### 整体流程
+
+```cpp
+kvm_set_ioapic_irq()  // vm ioctl的入口
+ ├─ kvm_arch_vm_ioctl()     
+ |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ kvm_pic_init()   // pic创建, 8259
+ |   |   ├─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
+ |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
+ |   |   ├─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
+ |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
+ |   ├─ kvm_ioapic_init()   // ioapic的初始化
+ |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
+ |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
+ |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
+ |   |       ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
+ |   |       ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
+ |   |       ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
+ |   |       ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
+ |   |       |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
+ |   |       |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
+ |   |       └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
+ |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+```
+
 
 `kvm_set_ioapic_irq -> kvm_ioapic_set_irq -> ioapic_service -> ioapic_deliver -> kvm_irq_delivery_to_apic -> __apic_accept_irq -> apic_set_vector`
 
@@ -546,6 +576,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
 
+## MSI中断触发函数: kvm_set_msi
 
 ## 具体注入过程
 
@@ -783,6 +814,10 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 #define INTR_INFO_UNBLOCK_NMI           0x1000          /* 12 */
 #define INTR_INFO_VALID_MASK            0x80000000      /* 31 */
 ```
+
+# LAPIC接收中断
+
+然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的kvm_lapic结构体中的相应位置。
 
 ## 中断路由表的初始化
 
