--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -18,7 +18,7 @@ kvm_set_irq()  // 中断注入入口
  ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
  ├─ while() {  // 遍历中断路由项
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
- ├─ } // 遍历得到的中断路由项
+ └─ } // 遍历得到的中断路由项
 ```
 
 ## 入口函数: kvm_set_irq()
@@ -35,7 +35,7 @@ kvm_set_irq()  // 中断注入入口
 int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
                 bool line_status)
 {
-        // 这儿代码是不是有问题? 为啥只有3项
+        // 因为一共3个芯片, 每个芯片24个引脚, 也就是意味着同一个irq的路由项最多3个
         struct kvm_kernel_irq_routing_entry irq_set[KVM_NR_IRQCHIPS];
         int ret = -1, i, idx;
 
@@ -118,9 +118,10 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 ### 整体流程
 
 ```cpp
-kvm_set_ioapic_irq()  // vm ioctl的入口
- ├─ kvm_arch_vm_ioctl()     
- |   ├─ irqchip_in_kernel(kvm)  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+kvm_set_ioapic_irq()  // ioapic的中断触发入口
+ ├─ struct kvm_ioapic *ioapic = kvm->arch.vioapic; // 获取虚拟机的ioapic    
+ ├─ kvm_ioapic_set_irq()     
+ |   ├─ irq_level = __kvm_irq_line_state() // 获取
  |   ├─ kvm_pic_init()   // pic创建, 8259
  |   |   ├─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
  |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
