--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -120,10 +120,10 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 ```cpp
 kvm_set_ioapic_irq()  // ioapic的中断触发入口
  ├─ struct kvm_ioapic *ioapic = kvm->arch.vioapic; // 获取虚拟机的ioapic    
- ├─ kvm_ioapic_set_irq()     
- |   ├─ irq_level = __kvm_irq_line_state() // 获取
- |   ├─ kvm_pic_init()   // pic创建, 8259
- |   |   ├─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
+ └─ kvm_ioapic_set_irq()     
+ |   ├─ irq_level = __kvm_irq_line_state() // 获取电平
+ |   └─ ioapic_set_irq()   // 
+ |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
  |   |   ├─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
  |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
@@ -192,7 +192,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         u32 mask = 1 << irq;
         u32 old_irr;
         int edge, ret;
-        // 该irq对应的重定向表项
+        // 该irq对应的ioapic的重定向表项, 即RTE
         entry = ioapic->redirtbl[irq];
         /*判断触发方式*/
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
