--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -121,11 +121,12 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 kvm_set_ioapic_irq()  // ioapic的中断触发入口
  ├─ struct kvm_ioapic *ioapic = kvm->arch.vioapic; // 获取虚拟机的ioapic    
  └─ kvm_ioapic_set_irq()     
- |   ├─ irq_level = __kvm_irq_line_state() // 获取电平
+ |   ├─ irq_level = __kvm_irq_line_state(); // 获取电平
  |   └─ ioapic_set_irq()   // 
+ |   |   ├─ u32 mask = 1 << irq;   // irq对应的位 
  |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
- |   |   ├─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
- |   |   ├─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
+ |   |   ├─ edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG); // 判断触发方式, 是否边沿触发 
+ |   |   ├─ ioapic->irr &= ~mask; // 低电平时, 表明边沿触发第二次触发, 清理irr中相应的irq位, 直接返回, 说明模拟情况下电平触发只在高电平触发
  |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
@@ -196,7 +197,8 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         entry = ioapic->redirtbl[irq];
         /*判断触发方式*/
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
-        /* 如果低电平, 表明是模拟边沿触发的第二次触发??? 清理irr对应位后直接返回*/
+        // 如果低电平, 表明是模拟边沿触发的第二次触发
+        // 清理irr对应位后直接返回
         // 说明电平触发只是在high电平触发
         if (!irq_level) {
                 // 清理该irq位
