--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -127,8 +127,8 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   ├─ edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG); // 判断触发方式, 是否边沿触发 
  |   |   ├─ ioapic->irr &= ~mask; // 低电平时, 表明边沿触发第二次触发, 清理irr中相应的irq位, 直接返回, 说明模拟情况下电平触发只在高电平触发
- |   |   ├─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   ├─ old_irr = ioapic->irr; // 保存原有irr寄存器
+ |   |   ├─ ioapic->irr |= mask; // irr寄存器相应位置位
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
  |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
@@ -201,13 +201,13 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         // 清理irr对应位后直接返回
         // 说明电平触发只是在high电平触发
         if (!irq_level) {
-                // 清理该irq位
+                // 第二次边沿触发, 清理该irq位
                 ioapic->irr &= ~mask;
                 ret = 1;
                 // 直接返回
                 goto out;
         }
-
+        // 往下表明是第一次边沿触发或者电平触发, 都是高电平
         /*
          * AMD SVM AVIC accelerate EOI write and do not trap,
          * in-kernel IOAPIC will not be able to receive the EOI.
