--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -241,6 +241,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         if (edge) {
                 ioapic->irr_delivered &= ~mask;
                 // 边沿触发且旧的irr寄存器与请求的irr相等
+                // 说明已经有个这样的中断请求, 但是
                 if (old_irr == ioapic->irr) {
                         ret = 0;
                         goto out;
