--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -129,32 +129,18 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   ├─ ioapic->irr &= ~mask; // 低电平时, 表明边沿触发第二次触发, 清理irr中相应的irq位, 直接返回, 说明模拟情况下电平触发只在高电平触发
  |   |   ├─ old_irr = ioapic->irr; // 保存原有irr寄存器
  |   |   ├─ ioapic->irr |= mask; // irr寄存器相应位置位
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
- |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
- |   ├─ kvm_ioapic_init()   // ioapic的初始化
- |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
- |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
- |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
- |   |       ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
- |   |       ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
- |   |       ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
- |   |       ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
- |   |       |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
- |   |       |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
- |   |       └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
+ |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
+ |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
+ |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, kvm_lapic_irq
+ |   |   |   ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
+ |   |   |   ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
+ |   |   |   |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
+ |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
+ |   |   |   └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
-
-`kvm_set_ioapic_irq -> kvm_ioapic_set_irq -> ioapic_service -> ioapic_deliver -> kvm_irq_delivery_to_apic -> __apic_accept_irq -> apic_set_vector`
-
- 
-
-整个流程是先检查IOAPIC状态，如果符合注入条件，则组建中断结构体，发送到指定VCPU的LAPIC，设置LAPIC的寄存器，完成虚拟中断控制器设置。
-
-
-我们以`kvm_set_ioapic_irq`为例进行分析，该函数**没有实质性的操作**，就调用了`kvm_ioapic_set_irq`函数
+整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成虚拟中断控制器设置。
 
 ```cpp
 static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -241,7 +227,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         if (edge) {
                 ioapic->irr_delivered &= ~mask;
                 // 边沿触发且旧的irr寄存器与请求的irr相等
-                // 说明已经有个这样的中断请求, 但是
+                // 说明已经有个这样的中断请求, 不触发
                 if (old_irr == ioapic->irr) {
                         ret = 0;
                         goto out;
