--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -132,12 +132,10 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
  |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, kvm_lapic_irq
- |   |   |   ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
- |   |   |   ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
- |   |   |   |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
- |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
- |   |   |   └─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
- |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+ |   |   |   └─ kvm_irq_delivery_to_apic();
+ |   |   |   |   ├─    // 
+ |   |   |   |   └─ kvm_apic_set_irq();   // 
+ |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成虚拟中断控制器设置。
