--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -807,6 +807,112 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的kvm_lapic结构体中的相应位置。
 
+```cpp
+/*
+ * Add a pending IRQ into lapic.
+ * Return 1 if successfully added and 0 if discarded.
+ */
+static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
+                             int vector, int level, int trig_mode,
+                             struct dest_map *dest_map)
+{
+        int result = 0;
+        struct kvm_vcpu *vcpu = apic->vcpu;
+
+        trace_kvm_apic_accept_irq(vcpu->vcpu_id, delivery_mode,
+                                  trig_mode, vector);
+        // APIC 投递模式, 表明是什么功能
+        switch (delivery_mode) {
+        case APIC_DM_LOWEST:
+                vcpu->arch.apic_arb_prio++;
+                /* fall through */
+        case APIC_DM_FIXED:
+                if (unlikely(trig_mode && !level))
+                        break;
+
+                /* FIXME add logic for vcpu on reset */
+                if (unlikely(!apic_enabled(apic)))
+                        break;
+
+                result = 1;
+
+                if (dest_map) {
+                        __set_bit(vcpu->vcpu_id, dest_map->map);
+                        dest_map->vectors[vcpu->vcpu_id] = vector;
+                }
+
+                if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
+                        if (trig_mode)
+                                kvm_lapic_set_vector(vector,
+                                                     apic->regs + APIC_TMR);
+                        else
+                                kvm_lapic_clear_vector(vector,
+                                                       apic->regs + APIC_TMR);
+                }
+
+                if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
+                        kvm_lapic_set_irr(vector, apic);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_REMRD:
+                result = 1;
+                vcpu->arch.pv.pv_unhalted = 1;
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_SMI:
+                result = 1;
+                kvm_make_request(KVM_REQ_SMI, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_NMI:
+                result = 1;
+                kvm_inject_nmi(vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_INIT:
+                if (!trig_mode || level) {
+                        result = 1;
+                        /* assumes that there are only KVM_APIC_INIT/SIPI */
+                        apic->pending_events = (1UL << KVM_APIC_INIT);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_STARTUP:
+                result = 1;
+                apic->sipi_vector = vector;
+                /* make sure sipi_vector is visible for the receiver */
+                smp_wmb();
+                set_bit(KVM_APIC_SIPI, &apic->pending_events);
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_EXTINT:
+                /*
+                 * Should only be called by kvm_apic_local_deliver() with LVT0,
+                 * before NMI watchdog was enabled. Already handled by
+                 * kvm_apic_accept_pic_intr().
+                 */
+                break;
+
+        default:
+                printk(KERN_ERR "TODO: unsupported delivery mode %x\n",
+                       delivery_mode);
+                break;
+        }
+        return result;
+}
+```
+
 ## 中断路由表的初始化
 
 
