--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -805,7 +805,7 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 # LAPIC接收中断
 
-然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的kvm_lapic结构体中的相应位置。
+然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
 ```cpp
 /*
@@ -843,6 +843,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
                 if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
                         if (trig_mode)
+                                // 中断触发，设置中断位，设置apic里面的寄存器变量，偏移地址APIC_TMR和Linux真实APIC控制器相同
                                 kvm_lapic_set_vector(vector,
                                                      apic->regs + APIC_TMR);
                         else
