--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -11,8 +11,6 @@
 
 它是指**将中断写入VMCS对应的中断信息位**，来实现中断的注入，当中断完成后通过**读取中断的返回信息**来分析中断是否正确。
 
-
-
 ## 整体流程
 
 ```cpp
@@ -566,7 +564,7 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
 
-# LAPIC接收中断
+## LAPIC接收中断
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
@@ -684,7 +682,11 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
 kvm_set_msi -> kvm_irq_delivery_to_apic -> kvm_apic_set_irq -> __apic_accept_irq
 
+这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
+
 ## 具体注入过程
+
+当我们设置好虚拟中断控制器以后，接着在KVM_RUN退出以后，就开始遍历这些虚拟中断控制器，如果发现中断，就将中断写入中断信息位，
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
 
