--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -767,6 +767,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
          * serviced prior to recognizing any new events in order to
          * fully complete the previous instruction.
          */
+        // 如果存在老的还没有注入的中断，则注入之
         else if (!vcpu->arch.exception.pending) {
                 if (vcpu->arch.nmi_injected)
                         kvm_x86_ops.set_nmi(vcpu);
@@ -848,7 +849,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
                                 return r;
                 }
                 if (kvm_x86_ops.interrupt_allowed(vcpu)) {
-                        // 将中断记录到vcpu中
+                        // 获得当前中断号, 将中断记录到vcpu中
                         kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu),
                                             false);
                         // 写入vmcs结构中
@@ -864,20 +865,21 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
 static inline void kvm_queue_interrupt(struct kvm_vcpu *vcpu, u8 vector,
     bool soft)
 {
-    vcpu->arch.interrupt.pending = true;
-    vcpu->arch.interrupt.soft = soft;
-    vcpu->arch.interrupt.nr = vector;
+        //将当前中断pending标记为true
+        vcpu->arch.interrupt.pending = true;
+        vcpu->arch.interrupt.soft = soft;
+        vcpu->arch.interrupt.nr = vector;
 }
 ```
 
-最后会调用`kvm_x86_ops->set_irq`，进行中断注入的最后一步，即写入到vmcs结构中。该函数指针指向`vmx_inject_irq`
+最后会调用`kvm_x86_ops->set_irq`，进行中断注入的最后一步，即**写入到vmcs结构**中。该函数指针指向`vmx_inject_irq`
 
 ```cpp
 static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 {
         struct vcpu_vmx *vmx = to_vmx(vcpu);
         uint32_t intr;
-        //中断号
+        // 之前得到并且设置好的中断的中断向量号
         int irq = vcpu->arch.interrupt.nr;
 
         trace_kvm_inj_virq(irq);
@@ -892,6 +894,7 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
         }
         // 设置有中断向量的有效性
         intr = irq | INTR_INFO_VALID_MASK;
+        // 看是外部中断还是软中断，我们之前注入的地方默认是false，所以是走下面分支
         // 如果是软件中断
         if (vcpu->arch.interrupt.soft) {
                 // 内部中断
@@ -902,14 +905,19 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
         } else
                 // 标记为外部中断
                 intr |= INTR_TYPE_EXT_INTR;
-        // 写入vmxs的VM_ENTRY_INTR_INFO_FIELD中
+        // 写入vmcs的VM_ENTRY_INTR_INFO_FIELD中断信息位中
         vmcs_write32(VM_ENTRY_INTR_INFO_FIELD, intr);
 
         vmx_clear_hlt(vcpu);
 }
 ```
 
-最终会写入到vmcs的VM_ENTRY_INTR_INFO_FIELD中，这需要按照一定的格式。具体格式详见intel手册。0-7位是向量号，8-10位是中断类型（硬件中断或者软件中断），最高位是有效位，12位是NMI标志。
+最终会写入到vmcs的`VM_ENTRY_INTR_INFO_FIELD`中，这需要按照一定的格式。具体格式详见intel手册。
+
+- `0-7`位是向量号，
+- `8-10`位是中断类型（硬件中断或者软件中断），
+- 最高位是有效位，
+- 12位是NMI标志。
 
 ```cpp
 // arch/x86/include/asm/vmx.h
@@ -923,39 +931,17 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 #define INTR_INFO_VALID_MASK            0x80000000      /* 31 */
 ```
 
+这样KVM就完成了虚拟中断的注入，从中断源触发到写入虚拟中断控制器，再到VMCS的过程。
 
-## 中断路由表的初始化
+# 中断注入的触发
+
+最后再回过头来讲讲是什么时候触发这个`kvm_set_irq`的。当然**中断需要模拟的时候**就调用。这里调用分为两种。
+
+1. 可以直接在KVM中调用这个函数，如虚拟I8254，我在其他文章中分析过i8254的中断模拟过程，这里有这种类型设备的中断源的模拟，顺被贴一张，一般中断源的逻辑流程图：
+
+![2020-05-12-09-12-30.png](./images/2020-05-12-09-12-30.png)
 
 
-中断虚拟化流程
-
-```cpp
-kvm_set_irq
-　　kvm_ioapic_set_irq
-　　　　　ioapic_service
-　　　　　　ioapic_deliver
-　　　　　　　　kvm_irq_delivery_to_apic
-　　　　　　　　　　kvm_apic_set_irq
-　　　　　　　　　　　　__apic_accept_irq
-　　　　　　　　　　　　　　vmx_deliver_posted_interrupt
-
-具体注入阶段
-vcpu_enter_guest
-　　　kvm_apic_accept_events
-　　　　　　inject_pending_event
-　　　　　　　　kvm_queue_interrupt
-　　　　　　　　　　vmx_inject_irq
-　　　　　　　　　　　　vmcs_write32(VM_ENTRY_INTR_INFO_FIELD, intr);
-
-中断路由表初始化
-
-x86.c kvm_arch_vm_ioctl
-　　kvm_setup_default_irq_routing irq_common.c
-　　　　kvm_set_irq_routing irq_chip.c
-　　　　　　setup_routing_entry irq_chip.c
-　　　　　　　　kvm_set_routing_entry irq_chip.c
-　　　　　　　　　　e->set = kvm_set_ioapic_irq; irq_common.c
-```
 
 # 参考
 
