--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -941,8 +941,28 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 ![2020-05-12-09-12-30.png](./images/2020-05-12-09-12-30.png)
 
+2. 可以从QEMU中通过调用QEMU中的函数中断注入函数kvm_set_irq.
 
+在QEMU中，如果有中断触发，会触发到相应中断控制器，中断方式也有8259(hw/i8259.c), IOAPIC(hw/ipf.c x86下没用这个，pic和apic相同处理，将pic扩展到24个), MSI(hw/msix.c)，在这里中断控制器里面都会触发这个QEMU的kvm_set_irq函数。
+
+至于这个kvm_set_irq函数位置在qemu-kvm.c,在这个函数中进而调用kvm_set_irq_level,最后通过一个KVM_IRQ_LINE的IOCTL调用KVM模块里面的kvm_set_irq函数。
+
+```cpp
+int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
+{
+   ... ...
+   event.level = level;
+   event.irq = irq;
+    /*IOCTL*/
+   r = kvm_vm_ioctl(kvm_state, kvm->irqchip_inject_ioctl, &event);
+    ... ...
+}
+```
+
+这里我就不分析QEMU中的中断源了，毕竟主要将的是KVM
 
 # 参考
 
 https://www.cnblogs.com/ck1020/p/7424922.html
+
+https://blog.csdn.net/yearn520/article/details/6663532
