--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -132,7 +132,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   └─ ioapic_service();   // 将s赋值给kvm->arch.vpic
  |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, 对应kvm_lapic_irq
- |   |   |   └─ kvm_irq_delivery_to_apic();
+ |   |   |   └─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
  |   |   |   |   ├─    // 
  |   |   |   |   └─ kvm_apic_set_irq();   // 
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
