--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -1,4 +1,13 @@
 
+对于多核CPU需要IPI机制进行通知或者唤醒，当CPU接收到的中断不是本地中断的时候，需要通过IPI唤醒对端CPU，然后进行中断的传递
+
+那么QEMU中如何实现不同VCPU通知的呢
+
+首先在初始化KVM虚拟机的时候，注册了核间通信处理函数，这个函数完成了IPI的功能
+
+
+
+
 Guest内核发送IPI，也就是向虚拟机APIC的寄存器中写入，对APIC的写动作会被截获，并退出到ROOT模式，对APIC的写动作调用 apic_reg_write()
 
 
@@ -8,6 +17,8 @@ static const struct kvm_io_device_ops apic_mmio_ops = {
 .write    = apic_mmio_write,
 };
 ```
+
+```cpp
 apic_mmio_write -> apic_reg_write
 ```
 
@@ -21,6 +32,3 @@ apic_reg_write 
 -> kvm_irq_delivery_to_apic //发送到目的VCPU 
 
 -> kvm_apic_set_irq(vcpu, irq, dest_map);
-————————————————
-版权声明：本文为CSDN博主「leoufung」的原创文章，遵循CC 4.0 BY-SA版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/leoufung/article/details/51038944
