--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
@@ -68,6 +68,8 @@ int main()
  ├─ os_daemonize()
  ├─ configure_accelerator()                  // 启用 KVM 加速支持
  |   └─ kvm_init()                           // 【1】创建 KVM 虚拟机并获取对应的 fd
+ |       ├─ KVMState *s = KVM_STATE(ms->accelerator); //
+ |       ├─ s->fd = qemu_open("/dev/kvm", O_RDWR); //
  |       ├─ kvm_ioctl(KVM_GET_API_VERSION)   // 检查 KVM API 版本
  |       ├─ kvm_ioctl(KVM_CREATE_VM)         // 创建虚拟机，并获取 vmfd
  |       ├─ kvm_check_extension()            // 与kvm交互, 检查特性支持
