--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -3,7 +3,24 @@
 
 那么QEMU中如何实现不同VCPU通知的呢
 
-首先在初始化KVM虚拟机的时候，注册了核间通信处理函数，这个函数完成了IPI的功能
+在KVM中，注册了核间通信处理函数，这个函数完成了IPI的功能
+
+```cpp
+// include/hw/core/cpu.h
+typedef void (*CPUInterruptHandler)(CPUState *, int);
+
+// hw/core/cpu.c
+CPUInterruptHandler cpu_interrupt_handler = generic_handle_interrupt;
+```
+
+
+
+
+
+
+
+
+
 
 
 
