--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -3,7 +3,7 @@
 
 那么QEMU中如何实现不同VCPU通知的呢
 
-在KVM中，注册了核间通信处理函数，这个函数完成了IPI的功能
+在QEMU中，注册了核间通信处理函数，这个函数完成了IPI的功能
 
 ```cpp
 // include/hw/core/cpu.h
@@ -11,7 +11,45 @@ typedef void (*CPUInterruptHandler)(CPUState *, int);
 
 // hw/core/cpu.c
 CPUInterruptHandler cpu_interrupt_handler = generic_handle_interrupt;
+// CPU的IPI通信接口
+static void generic_handle_interrupt(CPUState *cpu, int mask)
+{   
+    /*记录中断请求号*/
+    cpu->interrupt_request |= mask;
+    /*如果不是本地CPU，启动相应的VCPU接收中断*/
+    if (!qemu_cpu_is_self(cpu)) {
+        qemu_cpu_kick(cpu);
+    }
+}
 ```
+
+```cpp
+/*
+* 启动指定的VCPU
+*/
+void qemu_cpu_kick(CPUState *cpu)
+{
+    // 唤醒所有等待在cpu->halt_cond上的VCPU线程，关于QEMUCond，请参考《QEMU VCPU线程同步机制之QemuCond(基于QEMU2.0.0)》
+    qemu_cond_broadcast(cpu->halt_cond);
+    if (tcg_enabled()) {
+        if (qemu_tcg_mttcg_enabled()) {
+            cpu_exit(cpu);
+        } else {
+            qemu_cpu_kick_rr_cpus();
+        }
+    } else {
+        if (hax_enabled()) {
+            /*
+             * FIXME: race condition with the exit_request check in
+             * hax_vcpu_hax_exec
+             */
+            cpu->exit_request = 1;
+        }
+        qemu_cpu_kick_thread(cpu);
+    }
+}
+```
+
 
 
 
