--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -29,8 +29,9 @@ static void generic_handle_interrupt(CPUState *cpu, int mask)
 */
 void qemu_cpu_kick(CPUState *cpu)
 {
-    // 唤醒所有等待在cpu->halt_cond上的VCPU线程，关于QEMUCond，请参考《QEMU VCPU线程同步机制之QemuCond(基于QEMU2.0.0)》
+    // 唤醒所有等待在cpu->halt_cond上的VCPU线程，关于QEMUCond，请参考《QEMU VCPU线程同步机制之QemuCond》
     qemu_cond_broadcast(cpu->halt_cond);
+    // 对于不是TCG的且还没有被kick的VCPU线程进行唤醒
     if (tcg_enabled()) {
         if (qemu_tcg_mttcg_enabled()) {
             cpu_exit(cpu);
@@ -51,7 +52,37 @@ void qemu_cpu_kick(CPUState *cpu)
 ```
 
 
+```cpp
+static void qemu_cpu_kick_thread(CPUState *cpu)
+{
+#ifndef _WIN32
+    int err;
 
+    if (cpu->thread_kicked) {
+        return;
+    }
+    // 标明指定的VCPU线程已被唤醒
+    cpu->thread_kicked = true;
+    // 通过pthread_kill将SIG_IPI信号发送到指定的VCPU线程，将其唤醒
+    err = pthread_kill(cpu->thread->thread, SIG_IPI);
+    if (err && err != ESRCH) {
+        fprintf(stderr, "qemu:%s: %s", __func__, strerror(err));
+        exit(1);
+    }
+#else /* _WIN32 */
+    // 忽略
+    if (!qemu_cpu_is_self(cpu)) {
+        if (whpx_enabled()) {
+            whpx_vcpu_kick(cpu);
+        } else if (!QueueUserAPC(dummy_apc_func, cpu->hThread, 0)) {
+            fprintf(stderr, "%s: QueueUserAPC failed with error %lu\n",
+                    __func__, GetLastError());
+            exit(1);
+        }
+    }
+#endif
+}
+```
 
 
 
@@ -87,3 +118,5 @@ apic_reg_write 
 -> kvm_irq_delivery_to_apic //发送到目的VCPU 
 
 -> kvm_apic_set_irq(vcpu, irq, dest_map);
+
+#
