--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/5. IPI流程.md
@@ -31,7 +31,7 @@ void qemu_cpu_kick(CPUState *cpu)
 {
     // 唤醒所有等待在cpu->halt_cond上的VCPU线程，关于QEMUCond，请参考《QEMU VCPU线程同步机制之QemuCond》
     qemu_cond_broadcast(cpu->halt_cond);
-    // 对于不是TCG的且还没有被kick的VCPU线程进行唤醒
+    // 是TCG的
     if (tcg_enabled()) {
         if (qemu_tcg_mttcg_enabled()) {
             cpu_exit(cpu);
@@ -46,18 +46,18 @@ void qemu_cpu_kick(CPUState *cpu)
              */
             cpu->exit_request = 1;
         }
+        // 不是TCG的唤醒
         qemu_cpu_kick_thread(cpu);
     }
 }
 ```
-
 
 ```cpp
 static void qemu_cpu_kick_thread(CPUState *cpu)
 {
 #ifndef _WIN32
     int err;
-
+    // 已被唤醒则返回
     if (cpu->thread_kicked) {
         return;
     }
@@ -84,7 +84,14 @@ static void qemu_cpu_kick_thread(CPUState *cpu)
 }
 ```
 
+我们下面来看一下IPI的使用示例，
 
+`pic_irq_request`是通过`pc_init->pc_i8259_create->i8259_init(isa_bus, x86_allocate_cpu_irq())`，注册的irq的handler
+
+pic_irq_request
+-> cpu_interrupt
+-> cpu_interrupt_handler //这里调用 generic_handle_interrupt
+-> generic_handle_interrupt //唤醒指定VCPU的线程，发送中断
 
 
 
@@ -119,4 +126,6 @@ apic_reg_write 
 
 -> kvm_apic_set_irq(vcpu, irq, dest_map);
 
-#
+# 参考
+
+https://blog.csdn.net/leoufung/article/details/48781189
