--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -7,8 +7,9 @@
 - [2. Time Tick](#2-time-tick)
   - [2.1. 物理环境下的timer](#21-物理环境下的timer)
   - [2.2. 虚拟化下的timer](#22-虚拟化下的timer)
-- [3. 相关代码](#3-相关代码)
-  - [3.1. struct kvm_pit: pit芯片](#31-struct-kvm_pit-pit芯片)
+- [PIT模拟](#pit模拟)
+  - [3. 相关结构体](#3-相关结构体)
+    - [3.1. struct kvm_pit: pit芯片](#31-struct-kvm_pit-pit芯片)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
   - [5.1. LAPIC的创建](#51-lapic的创建)
@@ -71,21 +72,25 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
-kvm支持的时钟有8254,local apic timer,kvmclock等
+kvm支持的时钟有8254, local apic timer,kvmclock等
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
+# PIT模拟
 
-# 3. 相关代码
+Programmable Interval Timer, **可编程中断/间隔时钟**
 
-![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
+## 3. 相关结构体
 
-## 3.1. struct kvm_pit: pit芯片
+### 3.1. struct kvm_pit: pit芯片
 
 ```cpp
 struct kvm_pit {
+        // 设备操作函数
         struct kvm_io_device dev;
+        // 扬声器的操作函数
         struct kvm_io_device speaker_dev;
+        // 所属的虚拟机
         struct kvm *kvm;
         struct kvm_kpit_state pit_state;
         int irq_source_id;
@@ -97,11 +102,6 @@ struct kvm_pit {
 
 # 4. 整体流程
 
-整个主要流程:
-
-![2020-04-18-17-59.png](./images/2020-04-18-17-59.png)
-
-修正: 重定向表中有目标lapic的id
 
 # 5. 初始化中断控制器
 
