--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -7,7 +7,7 @@
 - [2. Time Tick](#2-time-tick)
   - [2.1. 物理环境下的timer](#21-物理环境下的timer)
   - [2.2. 虚拟化下的timer](#22-虚拟化下的timer)
-- [3. PIT模拟](#3-pit模拟)
+- [3. PIT(8254)模拟](#3-pit8254模拟)
   - [3.1. 相关结构体](#31-相关结构体)
     - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
   - [5. 初始化虚拟PIT](#5-初始化虚拟pit)
@@ -62,7 +62,7 @@ kvm支持的时钟有8254, local apic timer,kvmclock等
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
-# 3. PIT模拟
+# 3. PIT(8254)模拟
 
 Programmable Interval Timer, **可编程中断/间隔时钟**
 
