--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -50,7 +50,9 @@
 
 IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
-PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代.
+通过古老的8259pic 0号中断响应 `timer_interrupt` 这个中断处理函数
+
+PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代. 现在的Linux基本上不怎么用它. 说白了它就是个硬件实现的计数器系统，通过时钟中断来满足操作系统的定时器需求，通过写某些位来设置定时器，操作系统同时也要维护一套软件的定时器链表，与这个硬件链表进行对应
 
 PIT支持**周期性**和**单次计时**两种方式.
 
@@ -64,11 +66,13 @@ PIT支持**周期性**和**单次计时**两种方式.
 
 (2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 
 
-其频率范围是`2~8192Hz`, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
+开机时读取，需要的时候写入，它能够提供**稳定的时钟脉冲**，其频率范围是`2~8192Hz`, 通常接**IRQ8**, 软件可以通过`0x70~0x71 I/O`端口操作. 
 
 RTC支持**周期性**和**单次计时**两种方式.
 
 此外, 它还可以配置成**每秒产生一次中断！！！**, 具有**闹钟功能**. 由于具有**关机继续计时**的功能, RTC常被用来作**为操作系统提供日期**. 即"年/月/日".
+
+在Linux中，可以用RTC来获取当前的时间。它提供的稳定的脉冲就是可编程计数器的最底层。也就是说它是PIT和HPET的源头。
 
 ## 2.3. TSC: 时间戳计数器
 
@@ -76,13 +80,15 @@ RTC支持**周期性**和**单次计时**两种方式.
 
 其**时钟频率**和**CPU的频率**相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 
 
-它是CPU内部的一个寄存器，根据CPU的周期进行递增. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 通过它也可以校准RTC。
+它是CPU内部的一个寄存器，根据CPU的周期进行递增. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 通过它也可以校准RTC。很多系统都是通过读取这个时间来作为系统的时间
 
 由于**不产生时钟中断！！！**, 故无所谓周期性和单次计时方式.
 
 ## 2.4. LAPIC Timer: 本地时钟中断
 
 (4) **LAPIC Timer**: 该时钟是根据**LAPIC所在总线**(**系统总线**或**APIC总线**)频率产生的. 
+
+这个是针对smp系统的时钟，当系统没有本地时钟的时候，也可以通过时钟广播的方式模拟这个本地时钟，在smp系统中linux会优先选择这个时钟源，一旦使用了这个时钟，0号中断绑定的时钟源的profiling和update功能将会被switched off。比如pit将会从periodic转变为oneshot。所以只要打开了local apic，将优先使用这个时钟源。它的中断处理函数smp_apic_timer_interrupt。它在x86 arch里面的entry_64.s汇编文件中built。有点复杂。实现在apic.c中。
 
 为32位, 有如下两个特点.
 
@@ -102,7 +108,7 @@ HPET时钟通过**一个主计数器**, 和**32个比较器、匹配器**一起,
 
 例如, 可将**一个子时钟**配置成**每毫秒**产生一个**IRQ8中断**, **另一个子时钟**可配置成每毫秒产生一个**IRQ0中断**. 
 
-HPET可用于**代替传统PIT和RTC**, 此时平台的**IRQ0**、**IRQ8**中断**被HPET占用**。 
+HPET可用于**代替传统PIT和RTC**, 此时平台的**IRQ0**、**IRQ8**中断**被HPET占用**。 cpu内部时钟源，同样响应0号中断响应timer_interrupt。Linux中hpet已经取代了pit，有hpet系统先选择hpet.
 
 HPET支持**周期性**和**单次计时**两种工作方式。
 
@@ -112,7 +118,7 @@ HPET支持**周期性**和**单次计时**两种工作方式。
 
 # 3. 操作系统的时钟观
 
-从操作系统角度看, 时钟作用可以分为如下两类.
+从操作系统角度看, **时钟作用**可以分为如下两类.
 
 ## 统计值和驱动事件
 
