--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -118,6 +118,8 @@ HPET支持**周期性**和**单次计时**两种工作方式。
 
 # 3. 操作系统的时钟观
 
+两个系统时钟的常识jiffies和xtimer，前者是linux系统时钟的累计数字，后者是系统的墙上时间。
+
 从操作系统角度看, **时钟作用**可以分为如下两类.
 
 ## 统计值和驱动事件
