--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -10,6 +10,7 @@
 - [3. PIT(8254)模拟](#3-pit8254模拟)
   - [3.1. 相关结构体](#31-相关结构体)
     - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
+    - [hrtimer](#hrtimer)
   - [5. 初始化虚拟PIT](#5-初始化虚拟pit)
     - [5.1. QEMU](#51-qemu)
     - [5.2. 整体流程](#52-整体流程)
@@ -26,6 +27,10 @@
 
 - rtc: 
 - pit:
+- hpet
+- tsc
+- local timer
+- kvmclock
 
 # 2. Time Tick
 
@@ -120,6 +125,14 @@ struct kvm_pit {
         struct kthread_work expired;
 };
 ```
+
+### hrtimer
+
+hrtimer，不是时钟源，只是一种高精准软件时钟计算方法，Linux现在一般时钟这个来计算ticker。
+
+注: 不仅仅是kvm使用
+
+详细参见`Linux/Time`
 
 ## 5. 初始化虚拟PIT
 
