--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -10,7 +10,7 @@
 - [3. PIT(8254)模拟](#3-pit8254模拟)
   - [3.1. 相关结构体](#31-相关结构体)
     - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
-    - [hrtimer](#hrtimer)
+    - [struct hrtimer](#struct-hrtimer)
   - [5. 初始化虚拟PIT](#5-初始化虚拟pit)
     - [5.1. QEMU](#51-qemu)
     - [5.2. 整体流程](#52-整体流程)
@@ -64,7 +64,7 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 在**QEMU**中，用**SIGALARM信号**来实现：QEMU利用**某种机制**，使**timer interrupt handler**会向**QEMU process**发送一个**SIGALARM信号**，处理该信号过程中再**模拟PIT**中**产生一次时钟**。QEMU再通过某种机制，将**此模拟PIT**发出的**模拟中断交付给kvm**，再由kvm**注入**到虚拟机中去。
 
-目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
+目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这几个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
 kvm支持的时钟有8254, local apic timer,kvmclock等
 
@@ -73,6 +73,8 @@ kvm支持的时钟有8254, local apic timer,kvmclock等
 # 3. PIT(8254)模拟
 
 Programmable Interval Timer, **可编程中断/间隔时钟**
+
+KVM很多设备都是使用QEMU进行模拟的, 但是时钟已经在KVM重做了, 为了提升性能.
 
 ## 3.1. 相关结构体
 
@@ -126,7 +128,7 @@ struct kvm_pit {
 };
 ```
 
-### hrtimer
+### struct hrtimer
 
 hrtimer，不是时钟源，只是一种高精准软件时钟计算方法，Linux现在一般时钟这个来计算ticker。
 
@@ -214,7 +216,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         struct pid *pid;
         pid_t pid_nr;
         int ret;
-        // 分配空间
+        // 给 kvm_pit 分配空间
         pit = kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);
         if (!pit)
                 return NULL;
