--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -123,6 +123,7 @@ struct kvm_pit {
         struct kvm_kpit_state pit_state;
         int irq_source_id;
         struct kvm_irq_mask_notifier mask_notifier;
+        // 工作worker, 一个内核线程
         struct kthread_worker *worker;
         struct kthread_work expired;
 };
@@ -230,12 +231,11 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pid = get_pid(task_tgid(current));
         pid_nr = pid_vnr(pid);
         put_pid(pid);
-        // 在cpu0上创建work内核线程
+        // 在cpu0上创建work, 会建立一个内核线程
         pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
         if (IS_ERR(pit->worker))
                 goto fail_kthread;
         // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
-        // 准备workqueue ?
         kthread_init_work(&pit->expired, pit_do_work);
         // pit所属的虚拟机
         pit->kvm = kvm;
