--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -125,6 +125,7 @@ struct kvm_pit {
         struct kvm_irq_mask_notifier mask_notifier;
         // 工作worker, 一个内核线程
         struct kthread_worker *worker;
+        // work, 工作
         struct kthread_work expired;
 };
 ```
@@ -231,23 +232,25 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pid = get_pid(task_tgid(current));
         pid_nr = pid_vnr(pid);
         put_pid(pid);
-        // 在cpu0上创建work, 会建立一个内核线程
+        // 在cpu0上创建work, 会建立一个内核线程并唤醒
         pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
         if (IS_ERR(pit->worker))
                 goto fail_kthread;
-        // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
+        // 分配一个work(工作), 这个 pit_do_work 是工作函数，用来向客户机注入时钟中断
+        // 此时还未开始工作, 需要先将该work(工作)挂到某个worker(内核线程)工作队列(即调用kthread_queue_work)
         kthread_init_work(&pit->expired, pit_do_work);
         // pit所属的虚拟机
         pit->kvm = kvm;
 
         pit_state = &pit->pit_state;
         // 初始化hrtimer, 这个高精准定时器就作为虚拟时钟的时钟源
+        // 然而定时器的真实物理时钟源根据不同的硬件而不同
         hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
         // hrtimer的中断处理函数
         pit_state->timer.function = pit_timer_fn;
 
         pit_state->irq_ack_notifier.gsi = 0;
-        // 时钟中断模拟ack
+        // 时钟中断ack模拟函数
         pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;
         pit->mask_notifier.func = pit_mask_notifer;
 
@@ -292,7 +295,12 @@ fail_request:
 }
 ```
 
-初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在kvm_pit_reset里，每个1ms产生一次中断
+大概总结一下:
+
+1. 注册了一段IO，用来接收客户机的读写请求。
+2. 创建一个
+
+初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断
 
 
 
@@ -422,7 +430,9 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 
         if (atomic_read(&ps->reinject))
                 atomic_inc(&ps->pending);
-
+        // 将这个工作(work)挂载到worker(内核线程)的工作列表(work->list)
+        // 让worker(pt->worker, 内核线程)开始工作(pt->expired)
+        // 工作的处理函数是pt->expired->func
         kthread_queue_work(pt->worker, &pt->expired);
 
         if (ps->is_periodic) {
@@ -433,7 +443,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 }
 ```
 
-这里的worker在`kvm_create_pit`函数里设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+这里的work(工作)在`kvm_create_pit`函数里设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
 ```cpp
 static void pit_do_work(struct kthread_work *work)
